--- a/style.css
+++ b/style.css
@@ -1,27 +1,16 @@
 @charset "UTF-8";
 /*!
 Theme Name: Tiny
-Theme URI: https://wordpress.org/themes/tiny/
+Theme URI: https://github.com/krilor/tiny
 Author: Kristoffer Lorentsen
-Author URI: https://lorut.no/
+Author URI: https://github.com/krilor
 Description: Tiny is a powerful theme that doesn't get in your way.
 Version: 2.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: tiny
 Tags: blog, two-columns, right-sidebar, custom-colors, custom-menu, custom-logo, editor-style, featured-images, footer-widgets, sticky-post, threaded-comments, translation-ready
-This theme, like WordPress, is licensed under the GPL.
 */
-/* Variables */
-/* Variables */
-/* Colors */
-/* Fonts */
-/**
- * Breakpoints
- * Only use two breakpoints to keep it simple
- * Ref: http://screensiz.es/
- */
-/* Vendor stuff */
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -492,7 +481,6 @@ template {
   box-shadow: 0 0 0 2px #f15025;
 }
 
-/* Modules */
 /**
  * Alignment
  *
@@ -801,6 +789,15 @@ a.inverse-link:hover,
   }
 }
 /* Content structure */
+.size-auto,
+.size-full,
+.size-large,
+.size-medium,
+.size-thumbnail {
+  max-width: 100%;
+  height: auto;
+}
+
 .home .entry-content *:first-child {
   margin-top: 0;
 }
